# frontend-sdl2

./: .clang-format  .gitignore  CMakeLists.txt  ImGui.cmake  README.md  dependencies_check.cmake  install.cmake  packaging-linux.cmake  packaging-macos.cmake  packaging-windows.cmake  vcpkg-configuration.json  vcpkg.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build.yaml  buildcheck.yaml  release-linux.yaml  release-windows.yaml
Syphon.framework/Versions/A/: Syphon
Syphon.framework/Versions/A/Headers/: SyphonSubclassing.h
Syphon.framework/Versions/A/Resources/: Info.plist
Syphon.framework/Versions/A/_CodeSignature/: CodeResources
src/: AudioCapture.cpp  AudioCapture.h  AudioCaptureImpl_SDL.cpp  AudioCaptureImpl_SDL.h  AudioCaptureImpl_WASAPI.cpp  AudioCaptureImpl_WASAPI.h  CMakeLists.txt  FPSLimiter.cpp  FPSLimiter.h  GuiFileChooserWindow.cpp  GuiFileChooserWindow.h  PresetSelectionGui.cpp  PresetSelectionGui.h  ProjectMSDLApplication.cpp  ProjectMSDLApplication.h  ProjectMWrapper.cpp  ProjectMWrapper.h  RenderLoop.cpp  RenderLoop.h  SDLRenderingWindow.cpp  SDLRenderingWindow.h  TextureSharing.h  TextureSharing.mm  fetch_syphon.cmake  main.cpp  projectMSDL.rc
src/glad/: CMakeLists.txt
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/gui/: AboutWindow.cpp  AboutWindow.h  CMakeLists.txt  FileChooser.cpp  FileChooser.h  HelpWindow.cpp  HelpWindow.h  MainMenu.cpp  MainMenu.h  PresetSelection.cpp  PresetSelection.h  ProjectMGUI.cpp  ProjectMGUI.h  SettingsWindow.cpp  SettingsWindow.h  SystemBrowser.cpp  SystemBrowser.h  ToastMessage.cpp  ToastMessage.h
src/notifications/: CMakeLists.txt  DisplayToastNotification.cpp  DisplayToastNotification.h  PlaybackControlNotification.cpp  PlaybackControlNotification.h  QuitNotification.cpp  QuitNotification.h  UpdateWindowTitleNotification.cpp  UpdateWindowTitleNotification.h
src/resources/: package-description.txt  projectMSDL.desktop  projectMSDL.properties.in
src/resources/icons/: icon.icns
